:up: Atualização do e-commerce

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+    
 
     <title>RedStore | E-commerce</title>
 </head>
@@ -64,30 +65,105 @@
     <!--Features products-->
     <div class="products">
         <div class="small-container">
-            <h2>Produtos em Destaque</h2>
+            <h2 class="title">Produtos em Destaque</h2>
             <div class="row">
                 <div class="col-4"><img src="RedStore_Img/images/product-1.jpg" alt="">
                     <h4>Camisa Puma Vermelha</h4>
-                    <div class="rating">
-                        
-                    </div>
                     <p>R$45,00</p>
                 </div>
                 <div class="col-4"><img src="RedStore_Img/images/product-2.jpg" alt="">
+                    <h4>Tênis Esportivo HRX</h4>
+                    <p>R$180,90</p>
                 </div>
                 <div class="col-4"><img src="RedStore_Img/images/product-3.jpg" alt="">
+                    <h4>Calça Moletom Puma</h4>
+                    <p>R$99,90</p>
                 </div>
                 <div class="col-4"><img src="RedStore_Img/images/product-4.jpg" alt="">
+                    <h4>Camisa Puma Azul</h4>
+                    <p>R$45,00</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="small-container">
+            <h2 class="title">Últimos Produtos</h2>
+            <div class="row">
+                <div class="col-4"><img src="RedStore_Img/images/product-9.jpg" alt="">
+                    <h4>Relógio Maggani</h4>
+                    <p>R$450,00</p>
+                </div>
+                <div class="col-4"><img src="RedStore_Img/images/product-10.jpg" alt="">
+                    <h4>Tênis Esportivo HRX</h4>
+                    <p>R$290,90</p>
+                </div>
+                <div class="col-4"><img src="RedStore_Img/images/product-11.jpg" alt="">
+                    <h4>Tênis de Passeio Puma</h4>
+                    <p>R$199,90</p>
+                </div>
+                <div class="col-4"><img src="RedStore_Img/images/product-12.jpg" alt="">
+                    <h4>Moletom Preto Puma</h4>
+                    <p>R$75,00</p>
+            </div>
+        </div>    
+
+    </div>
+
+    <!--Offers-->
+
+    <div class="offer">
+        <div class="small-container">
+            <div class="row">
+                <div class="col-2">
+                    <img src="RedStore_Img/images/exclusive.png" class="offer-img">
+                </div>
+                <div class="col-2">
+                    <p>Produto Exclusivo em oferta.</p>
+                    <h1>Smart Watch com design fino</h1>
+                    <small>Muito mais que um relógio, um dispositivo que controla sua agenda por você, te lembra de todos os seus afazeres, incluindo beber os 2 litros de água e gastar as energias míminas recomendadas pelos médicos.<br></small> 
+                    <a class="btn" chref="#">Compre agora &#8594</a>
                 </div>
             </div>
         </div>
     </div>
 
+     <!-- Testimonial -->
 
-
-
-
-
+    <div class="testimonial">
+        <div class="small-container">
+            <h2 class="title">Opinião dos clientes</h2>
+            <div class="row">
+                <div class="col-3">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita mollitia sunt illo doloribus cum consequuntur omnis? Suscipit, exercitationem. Nisi iure dolore, quibusdam aliquid quisquam dolores saepe! Consequuntur fugiat beatae in?</p>
+                    <div class="user">
+                        &#9733;&#9733;&#9733;&#9733;&#9734;
+                        <img src="RedStore_Img/images/user-1.png">
+                        <h3>Marta dos Santos</h3>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="col-3">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita mollitia sunt illo doloribus cum consequuntur omnis? Suscipit, exercitationem. Nisi iure dolore, quibusdam aliquid quisquam dolores saepe! Consequuntur fugiat beatae in?</p>
+                        <div class="user">
+                            &#9733;&#9733;&#9733;&#9733;&#9733;
+                            <img src="RedStore_Img/images/user-2.png">
+                            <h3>Josh Pancks</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="col-3">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita mollitia sunt illo doloribus cum consequuntur omnis? Suscipit, exercitationem. Nisi iure dolore, quibusdam aliquid quisquam dolores saepe! Consequuntur fugiat beatae in?</p>
+                        <div class="user">
+                            &#9733;&#9733;&#9733;&#9733;&#9734;
+                            <img src="RedStore_Img/images/user-3.png">
+                            <h3>Pâmela Duarte</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
 
