--- a/index.html
+++ b/index.html
@@ -18,20 +18,30 @@
 <body>
     <header class="header">
         <div class="container">
+
+            <div class="hamburguer">
+                <div class="line" id="line1"></div>
+                <div class="line" id="line2"></div>
+                <div class="line" id="line3"></div>
+            </div>
+
             <div class="navbar">
-                    <div class="logo"><img src="RedStore_Img/images/logo.png" width="125px" alt="">
+                <div class="logo"><img src="RedStore_Img/images/logo.png" width="125px" alt="">
             </div>
-            <nav>
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Produtos</a></li>
-                    <li><a href="#">Sobre</a></li>
-                    <li><a href="#">Contato</a></li>
-                    <li><a href="#">Conta</a></li>
-                </ul>
-            </nav>
-            <img src="RedStore_Img/images/cart.png" width="30px" height="30px" alt="Bolsa representando o carrinho de compras">
+            <div class="sidebar">
+                <nav class="menu">
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Produtos</a></li>
+                        <li><a href="#">Sobre</a></li>
+                        <li><a href="#">Contato</a></li>
+                        <li><a href="#">Conta</a></li>
+                    </ul>
+                </div>
+                </nav>
             </div>
+            <img src="RedStore_Img/images/cart.png" width="30px" height="30px" id="bag" alt="Bolsa representando o carrinho de compras">
+        </div>
             <div class="row">
                 <div class="col-2">
                     <h1>Presentei-se com um novo estilo, <br>agrade-se com novos ares e atividade física!</h1>
@@ -142,31 +152,89 @@
                     </div>
                 </div>
                 <div class="col-3">
-                    <div class="col-3">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita mollitia sunt illo doloribus cum consequuntur omnis? Suscipit, exercitationem. Nisi iure dolore, quibusdam aliquid quisquam dolores saepe! Consequuntur fugiat beatae in?</p>
                         <div class="user">
                             &#9733;&#9733;&#9733;&#9733;&#9733;
                             <img src="RedStore_Img/images/user-2.png">
                             <h3>Josh Pancks</h3>
                         </div>
-                    </div>
                 </div>
                 <div class="col-3">
-                    <div class="col-3">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita mollitia sunt illo doloribus cum consequuntur omnis? Suscipit, exercitationem. Nisi iure dolore, quibusdam aliquid quisquam dolores saepe! Consequuntur fugiat beatae in?</p>
-                        <div class="user">
-                            &#9733;&#9733;&#9733;&#9733;&#9734;
-                            <img src="RedStore_Img/images/user-3.png">
-                            <h3>Pâmela Duarte</h3>
-                        </div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita mollitia sunt illo doloribus cum consequuntur omnis? Suscipit, exercitationem. Nisi iure dolore, quibusdam aliquid quisquam dolores saepe! Consequuntur fugiat beatae in?</p>
+                    <div class="user">
+                        &#9733;&#9733;&#9733;&#9733;&#9734;
+                        <img src="RedStore_Img/images/user-3.png">
+                        <h3>Pâmela Duarte</h3>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 
+    <!--Brands-->
+    <div class="brands">
+        <div class="small-container">
+            <div class="row">
+                <div class="col-6">
+                    <img src="RedStore_Img/images/logo-coca-cola.png" alt="Logo Coca-Cola">
+                </div>
+                <div class="col-6">
+                    <img src="RedStore_Img/images/logo-godrej.png" alt="Logo Godrej">
+                </div>
+                <div class="col-6">
+                    <img src="RedStore_Img/images/logo-oppo.png" alt="Logo Oppo">
+                </div>
+                <div class="col-6">
+                    <img src="RedStore_Img/images/logo-philips.png" alt="Logo Philips">
+                </div>
+                <div class="col-6">
+                    <img src="RedStore_Img/images/logo-white.png" alt="Logo White">
+                </div>
+                <div class="col-6">
+                    <img src="RedStore_Img/images/logo-paypal.png" alt="Logo White">
+                </div>
+            </div>
+        </div>
+    </div>
 
+    <div class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="footer-col-1">
+                    <h3>Faça o downloand de nosso App.</h3>
+                    <p>Compatível com sistemas Android e IOS.</p>
+                    <div class="img-appstore-googleplay">
+                        <img src="RedStore_Img/images/app-store.png">
+                        <img src="RedStore_Img/images/play-store.png">
+                    </div>
+                </div>
+                <div class="footer-col-2">
+                    <h3>Links úteis</h3>
+                    <ul>
+                        <li>Cupons</li>
+                        <li>Blog</li>
+                        <li>Políticas de Privacidade</li>
+                        <li>Programa de Afiliados</li>
+                    </ul>
+                </div>
+                <div class="footer-col-3">
+                    <h3>Acompanhe nossas redes sociais</h3>
+                    <ul>
+                        <li>Instragram</li>
+                        <li>Twitter</li>   
+                        <li>Facebook</li>
+                        <li>YouTube</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <hr>
+        <div class="small-container-copyright">
+            <p>Copyright &copy; 2021 - Todos os direitos reservados - RedStore</p>
+        </div>
+    </div>
 
+    <script src="doc.js"></script>
     
 </body>
 </html>
