:up: Hamburguer finalizado

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header class="header">
         <div class="container">
 
-            <div class="hamburguer">
+            <div class="hamburguer" onclick="menutoggle()">
                 <div class="line" id="line1"></div>
                 <div class="line" id="line2"></div>
                 <div class="line" id="line3"></div>
@@ -27,21 +27,29 @@
 
             <div class="navbar">
                 <div class="logo"><img src="RedStore_Img/images/logo.png" width="125px" alt="">
-            </div>
-            <div class="sidebar">
-                <nav class="menu">
-                    <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Produtos</a></li>
-                        <li><a href="#">Sobre</a></li>
-                        <li><a href="#">Contato</a></li>
-                        <li><a href="#">Conta</a></li>
-                    </ul>
                 </div>
-                </nav>
+                <div class="sidebar">
+                    <nav class="menu">
+                        <ul>
+                            <li><a href="#">Home</a></li>
+                            <li><a href="#">Produtos</a></li>
+                            <li><a href="#">Sobre</a></li>
+                            <li><a href="#">Contato</a></li>
+                            <li><a href="#">Conta</a></li>
+                        </ul>
+                        <div class="redes-sociais">
+                            <a href="https://www.instagram.com/eipatrickrodrigues/"><i class="fab fa-instagram"></i></a>
+                            <a href="https://twitter.com/eipprs"><i class="fab fa-twitter"></i></a>
+                            <a href="https://github.com/eipatrickrodrigues"><i class="fab fa-github"></i></a>  
+                        </div>
+                    </nav>
+                </div>
+                <div class="bag"><img src="RedStore_Img/images/cart.png" id="bag" width="30px" height="30px" id="bag" alt="Bolsa representando o carrinho de compras">
+                </div>
             </div>
-            <img src="RedStore_Img/images/cart.png" width="30px" height="30px" id="bag" alt="Bolsa representando o carrinho de compras">
         </div>
+
+        <div>
             <div class="row">
                 <div class="col-2">
                     <h1>Presentei-se com um novo estilo, <br>agrade-se com novos ares e atividade física!</h1>
@@ -219,12 +227,9 @@
                 </div>
                 <div class="footer-col-3">
                     <h3>Acompanhe nossas redes sociais</h3>
-                    <ul>
-                        <li>Instragram</li>
-                        <li>Twitter</li>   
-                        <li>Facebook</li>
-                        <li>YouTube</li>
-                    </ul>
+                    <li>Instagram</li>
+                    <li>Facebook</li>
+                    <li>Twitter</li>
                 </div>
             </div>
         </div>
